# siyi-sdk

./: .gitmodules  CMakeLists.txt
include/: ai.hpp  gimbal.hpp  message.hpp  remote.hpp  sdk.hpp  siyi-sdk.h
src/: ai.cpp  gimbal.cpp  message.cpp  remote.cpp  sdk.cpp
src/tests/: CMakeLists.txt  crc_test.cpp  four_point_test.cpp  gimbal_control.cpp  remote_joy.cpp  tracker_test.cpp
